--- a/index.html
+++ b/index.html
@@ -154,25 +154,39 @@ prototyping, marketing strategy, landing page, Ux/UI?</p>
                 </div>
                 <ul class="easy__list">
                     <li class="easy__item">
-                        <img src="./images/woman1.png" alt="">
+                        <img class="item_img1" src="./images/woman1.png" alt="">
                         <span class="easy__box">I can take care of your pitch</span>
                  </li>
                    <li class="easy__item">
-                        <img src="./images/woman1.png" alt="">
-                        <span class="easy__box">I can take care of your pitch</span>
+                       <span class="easy__box">I can take care of your pitch</span>
+                       <img class="item_img2" src="./images/woman2.png" alt="">
                  </li>
                    <li class="easy__item">
-                        <img src="./images/woman1.png" alt="">
-                        <span class="easy__box">I can take care of your pitch</span>
+                       <span class="easy__box">I can take care of your pitch</span>
+                        <img class="item_img3" src="./images/woman3.png" alt="">
                  </li>
                    <li class="easy__item">
-                        <img src="./images/woman1.png" alt="">
+                        <img class="item_img4" src="./images/woman4.png" alt="">
                         <span class="easy__box">I can take care of your pitch</span>
                  </li>
                 </ul>
+                <button class="easy__btn">Contact our expert</button>
             </div>
         </section>
-
+        <section class="step__section">
+            <div class="container">
+                <h1 class="s__title">Contents Strategies</h1>
+                <p class="step__text">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
+              <ul class="step__list">
+                <li class="step__item">
+                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
+                    <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
+                </li>
+                <img src="./images/nuqta.png" alt="">
+              </ul>
+            </div>
+        </section>
 
 
 
