--- a/index.html
+++ b/index.html
@@ -146,34 +146,35 @@
             </div>
         </section>
         <section class="easy__section">
-            <div class="container ">
-                <div class="easy">
-                    <h1>Quick & Easy Process</h1>
-                    <p>Do you require some help for your project: Conception workshop,
-prototyping, marketing strategy, landing page, Ux/UI?</p>
-                </div>
-                <ul class="easy__list">
-                    <li class="easy__item">
-                        <img class="item_img1" src="./images/woman1.png" alt="">
-                        <span class="easy__box">I can take care of your pitch</span>
-                 </li>
-                   <li class="easy__item">
-                       <span class="easy__box">I can take care of your pitch</span>
-                       <img class="item_img2" src="./images/woman2.png" alt="">
-                 </li>
-                   <li class="easy__item">
-                       <span class="easy__box">I can take care of your pitch</span>
-                        <img class="item_img3" src="./images/woman3.png" alt="">
-                 </li>
-                   <li class="easy__item">
-                        <img class="item_img4" src="./images/woman4.png" alt="">
-                        <span class="easy__box">I can take care of your pitch</span>
-                 </li>
-                </ul>
-                <button class="easy__btn">Contact our expert</button>
-            </div>
-        </section>
-        <section class="step__section">
+    <div class="container ">
+        <div class="easy">
+            <h1>Quick & Easy Process</h1>
+            <p>Do you require some help for your project: Conception workshop, prototyping, marketing strategy, landing page, Ux/UI?</p>
+            
+            <ul class="easy__list">
+                <li class="easy__item">
+                    <img class="item_img1" src="./images/woman1.png" alt="Profile 1">
+                    <span class="easy__box">I can take care of your pitch</span>
+                </li>
+                <li class="easy__item item_1">
+                    <img class="item_img2" src="./images/woman2.png" alt="Profile 2">
+                    <span class="easy__box">I can take care of your pitch</span>
+                </li>
+                <li class="easy__item item_2">
+                    <img class="item_img3" src="./images/woman3.png" alt="Profile 3">
+                    <span class="easy__box">I can take care of your pitch</span>
+                </li>
+                <li class="easy__item item_3">
+                    <img class="item_img4" src="./images/woman4.png" alt="Profile 4">
+                    <span class="easy__box">I can take care of your pitch</span>
+                </li>
+            </ul>
+            
+            <button class="easy__btn">Contact our expert</button>
+        </div>
+    </div>
+</section>
+         <!-- <section class="step__section">
             <div class="container">
                 <h1 class="s__title">Contents Strategies</h1>
                 <p class="step__text">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
@@ -183,10 +184,19 @@ prototyping, marketing strategy, landing page, Ux/UI?</p>
                     <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
                     <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
                 </li>
-                <img src="./images/nuqta.png" alt="">
-              </ul>
+                <li class="step__item">
+                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
+                    <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
+                </li><li class="step__item">
+                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
+                    <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
+                </li>
+            </ul>
+            <img class="step__period" src="./images/nuqta.png" alt="">
             </div>
-        </section>
+        </section> -->
 
 
 
