--- a/index.html
+++ b/index.html
@@ -174,29 +174,29 @@
         </div>
     </div>
 </section>
-         <!-- <section class="step__section">
+         <section class="step__section">
             <div class="container">
                 <h1 class="s__title">Contents Strategies</h1>
                 <p class="step__text">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
               <ul class="step__list">
                 <li class="step__item">
-                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <img class="step__img" src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
                     <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
                     <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
                 </li>
                 <li class="step__item">
-                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <img class="step__img" src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
                     <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
-                    <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
+                    <h3 class="step__title2">Increasing Prosperity With Positive Thinking</h3>
                 </li><li class="step__item">
-                    <img src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
+                    <img class="step__img" src="./images/bussnes1.jpg" width="348" height="185" alt="Bussnes Image">
                     <p >By <strong> Wahid Ari | </strong>  03 March 2019</p>
                     <h3 class="step__title1">Increasing Prosperity With Positive Thinking</h3>
                 </li>
             </ul>
-            <img class="step__period" src="./images/nuqta.png" alt="">
+            <img class="step__period" width="68px" height="16px" src="./images/nuqta.png" alt="">
             </div>
-        </section> -->
+        </section>
 
 
 
